--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ node {
    }
    stage('Docker Build & Push') {
      docker.withRegistry('https://registry.hub.docker.com', 'docker') {
-      def nuestraapp = docker.build("ghandyjimenezr/nodejsapp:${gitcommit}", ".")
+      def nuestraapp = docker.build("ghandyjimenez/nodejsapp:${gitcommit}", ".")
       nuestraapp.push()
      }
    }
